<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_bg"
    android:orientation="vertical"
    tools:context="com.mxi.myinnerpharmacy.activity.PrescriptionStep">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.mxi.myinnerpharmacy.font.BoldMyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/pres_prep"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_white" />

        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_prescription_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/pres_prep_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
       android:layout_weight="1"

        android:orientation="vertical">



        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_prescription_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@mipmap/priscriptionstep_1"
            android:gravity="center"
            android:text="@string/state_coli"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />

        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_prescription_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@mipmap/priscriptionstep_2"
            android:gravity="center"
            android:text="@string/breath_any"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />

        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_prescription_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@mipmap/priscriptionstep_3"
            android:gravity="center"
            android:text="@string/heart_rate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />

        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_prescription_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:drawableLeft="@mipmap/prescripton_4"
            android:gravity="center"
            android:text="CURRENT SELF TALK"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_button">

        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />
    </LinearLayout>
</LinearLayout>
