<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resource_journal_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_bg"
    android:orientation="vertical"
    tools:context="com.mxi.myinnerpharmacy.activity.ResourceJournalSplashActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="Resource Journal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color_white" />

    <ScrollView
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_resource_journal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/md_resource_journal_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_white" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/md_resource_journal_text_1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_white" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/md_resource_journal_text_2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/md_resource_journal_text_3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/md_resource_journal_text_4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_white" />

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@drawable/rounded_button">

                    <com.mxi.myinnerpharmacy.font.RegularMyTextView
                        android:id="@+id/btn_ok"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Ok, I Understand"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
