<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.HeartRate">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center|right"
            android:text="@string/skip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white"
            android:visibility="gone" />

        <com.mxi.myinnerpharmacy.font.BoldMyTextView
            android:id="@+id/tv_heart_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/heart_process"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_white" />

        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_heart_rate_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/heart_rate_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:src="@mipmap/monitorprocess" />

    </LinearLayout>

    <com.mxi.myinnerpharmacy.font.RegularMyTextView
        android:id="@+id/tv_heart_rate_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button">

        <com.mxi.myinnerpharmacy.font.RegularMyTextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/go_to_heart_rate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />
    </LinearLayout>

</LinearLayout>
